kubernetes/grafana/overlays/k3s/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
  labels:
    app.kubernetes.io/instance: grafana
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.k3s.arthurvardevanyan.com`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
